# Fin_Break

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.json  workflow.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: build-smoke.yml
docs/: audit-allowlist.md  design.md  discovery.md  glossary.md  ideas.md  known-issues.md  security-model.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-pyside6-over-pyqt6.md  0003-sqlcipher-local-only-storage.md  0004-qt-native-pdf-over-weasyprint.md  0005-csv-mapping-profiles.md  0006-transfer-detection-suggest-confirm.md  0007-self-contained-bundled-releases.md
docs/journal/: FIBR-0003.md
docs/specs/: FIBR-0002.md  FIBR-0003.md  FIBR-0004.md
docs/standards/: coding.md
scripts/: _build-smoke-in-container.sh  build-smoke.sh  ci-local.sh
src/finbreak/: __main__.py  _selftest.py
tests/features/bundling/: spec.md  test_bundling.py
tests/features/gitignore/: test_gitignore.py
