[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "finbreak"
version = "0.0.0"
description = "Private, offline desktop app for understanding your personal finances."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Anthony Schemel" }]

# Runtime dependencies. Introduced early at P01 (FIBR-0003) so the bundling
# smoke-test can prove the three NATIVE stacks freeze + travel: Qt (PySide6),
# the SQLCipher library (sqlcipher3-binary bundles it in-wheel — no system
# libsqlcipher), and qpdf (behind pikepdf, also bundled in-wheel). Pinned
# EXACTLY per FIBR-0003 INV-4; the effective glibc floor is the max across
# these wheels' manylinux tags — measured 2.34 (PySide6's manylinux_2_34
# wheel governs), so build-smoke.sh freezes in a manylinux_2_34 container.
dependencies = [
    "PySide6==6.11.1",
    "sqlcipher3-binary==0.6.0",
    "pikepdf==10.9.1",
]

# PEP 735 dev dependency group. Pinned EXACTLY (==) for a reproducible
# toolchain across machines (FIBR-0001 INV-4); refreshed to latest-stable on
# the periodic sweep (coding.md § 1.5 / global rule § 5c), not silently.
# gitleaks is intentionally absent: it is a Go binary, not a pip package, and
# is installed separately (see CLAUDE.md "Build and test").
[dependency-groups]
dev = [
    "ruff==0.15.11",
    "bandit==1.9.4",
    "pip-audit==2.10.0",
    "pytest==9.0.3",
    "pytest-qt==4.5.0",
]
# PEP 735 build group — the freezer used only by scripts/build-smoke.sh
# (FIBR-0003). Kept out of `dev` so the everyday gate needn't install it.
build = [
    "pyinstaller==6.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sort, UP pyupgrade (modern idioms,
# coding.md § 1.5), B flake8-bugbear.
select = ["E", "W", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# PySide6 now lands at P01 (FIBR-0003), so the plugin would load — but the
# bundling smoke-test uses no `qtbot`, so the plugin stays disabled until the
# first real GUI test (P02), which will REMOVE this line.
addopts = "-p no:pytest-qt"
# Categories registered so `-m` selection and the gate's `-m "not perf"`
# exclusion work without "unknown marker" warnings (testing.md § 3.2–3.4).
markers = [
    "features: end-to-end feature-conformance tests (testing.md § 3.2)",
    "integration: cross-component tests hitting a real DB/FS/subprocess (testing.md § 3.3)",
    "perf: performance/throughput tests, excluded from the gate (testing.md § 3.4)",
]

[tool.bandit]
# Scan the application package only. Test trees may hold intentional
# bad-pattern fixtures for rule tests (testing.md § 3.5).
exclude_dirs = ["tests", ".venv"]
